--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CICD
+name: CI
 
 on:
   push:
@@ -16,4 +16,4 @@ jobs:
         run: |
           cd $GITHUB_WORKSPACE
       - name: Run Tests
-        run: python -m unittest unitetsts.py
+        run: python -m unittest tests.py
